feat: add topic type to model (#1)
