# src/api/v1/controllers/topic.controller.ts
@@ -1,23 +1,23 @@
 import express, { NextFunction } from 'express';
-import Topic from '../models/topic.model';
+import Topic, { TopicType } from '../models/topic.model';
 import Logger from '../../../utils/logger.util';
 import { NotFoundError } from '../errors/NotFoundError';
 import mongoose from 'mongoose';
 import { BadRequestError } from '../errors/BadRequestError';
 
 const createTopic = async (req: express.Request, res: express.Response, next: NextFunction) => {
-  const { name, description } = req.body;
+  const { name, description, type } = req.body;
   const existingTopic = await Topic.findOne({ name: name });
   if (existingTopic) {
     return next(new BadRequestError(`Tên chủ đề đã tồn tại`));
   }
-  const topic = new Topic({ name, description });
+  const topic = new Topic({ name, description, type });
   const savedTopic = await topic.save();
   return res.status(201).send(savedTopic);
 };
 
 const updateTopic = async (req: express.Request, res: express.Response, next: NextFunction) => {
-  const { name, description } = req.body;
+  const { name, description, type } = req.body;
   const { id } = req.params;
   if (!mongoose.Types.ObjectId.isValid(id)) {
     return next(new NotFoundError('Không tìm thấy đề mục'));
@@ -31,6 +31,9 @@ const updateTopic = async (req: express.Request, res: express.Response, next: Ne
   }
   if (description) {
     topic.description = description;
+  }
+  if (type) {
+    topic.type = type;
   }
   const updatedTopic = await topic.save();
   return res.send(updatedTopic);
@@ -54,9 +57,10 @@ const getTopic = async (req: express.Request, res: express.Response, next: NextF
 };
 
 const getTopics = async (req: express.Request, res: express.Response) => {
-  const { name } = req.query;
+  const { name, type = TopicType.THEORY } = req.query;
   const filter = {
     status: 'ACTIVE',
+    type,
     ...(name && { name: { $regex: name, $options: 'i' } }),
   };
   const topics = await Topic.find(filter);
